--- a/web/week6-task-set/styles.css
+++ b/web/week6-task-set/styles.css
@@ -8,6 +8,13 @@
 
 }
 
+.key {
+    border: 1px solid black;
+    border-radius: 2px;
+    display: inline-block;
+    padding: 5px 10px;
+}
+
 .equationsSize {
     font-size: 36px;
 }
