randomized block order

--- a/web/IAT/styles.css
+++ b/web/IAT/styles.css
@@ -18,6 +18,16 @@
     padding: 5px 10px;
 }
 
+.emphasis {
+    background-color: yellow;
+    border-radius: 5px;
+    width: 100%;
+    padding: 4px;
+    color: black;
+    font-weight: bold;
+}
+
+
 .loader {
     width: 48px;
     height: 48px;
